--- a/src/main/java/TODO.txt
+++ b/src/main/java/TODO.txt
@@ -23,3 +23,7 @@ https://segmentfault.com/a/1190000017128263?utm_source=tag-newest
 1.消息队列RabbitMQ
 2.分布式事务
 3.SpringCloud系列(功能分割,网关,Hytrix等）
+
+12/25-28
+1.docker学习
+不适合数据库：http://mini.eastday.com/mobile/190523105731119.html
