--- a/src/main/java/TODO.txt
+++ b/src/main/java/TODO.txt
@@ -10,20 +10,22 @@ https://blog.csdn.net/qq_16605855/article/details/80192762
 参考UML目录下的“我的UML”
 https://www.cnblogs.com/jiangds/p/6596595.html
 
+4.消息队列RabbitMQ实现分布式事务
+代码中的RabbitMQ在exclude目录下
+https://blog.csdn.net/piaoslowly/article/details/81625687
+https://blog.csdn.net/liberty12345678/article/details/82527837
+https://blog.csdn.net/qq_31463999/article/details/89788176
+https://www.cnblogs.com/toov5/p/10289999.html
+https://www.cnblogs.com/theRhyme/p/10874409.html（死信队列）
+
 ---------------------------------------------------------------------------
 
-12/23
+12/24-28
 1.线程池
 2.Netty
 https://www.jianshu.com/p/b1e7e41a7d28
 https://www.cnblogs.com/little-fly/p/8683197.html
 https://segmentfault.com/a/1190000017128263?utm_source=tag-newest
-
-12/24
-1.消息队列RabbitMQ
-2.分布式事务
 3.SpringCloud系列(功能分割,网关,Hytrix等）
-
-12/25-28
-1.docker学习
+4.docker学习
 不适合数据库：http://mini.eastday.com/mobile/190523105731119.html
